--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/i18n": "^7",
     "body-parser": "^1.19.0",
     "chart.js": "^3.8.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "core-js": "^3.25.3",
     "element-ui": "^2.15.10",
     "express": "^4.17.1",
